Added Firebase to library Use firebase for Cloud messaging and Invites, to share content with deep links to run the app Removed Google Cloud Messaging Added action bar headers and Share button to history list and event details for library